remove private key related code. is not need to encrypt